Feat: Make Footer Responsive

--- a/lms-project/src/app/components/footer/footer.component.html
+++ b/lms-project/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
       <h1>Great<span>Mind</span></h1>
     </div>
     <div class="footer-description">
-      <h1>Great<span>Mind</span></h1>
+      <h1>Great <span>Mind</span></h1>
       <hr />
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -50,27 +50,31 @@
       <h1>Stay Connected</h1>
       <div class="social-icons">
         <a href=""><i class="fa fa-facebook"></i></a>
+        <a href=""><i class="fa fa-linkedin"></i></a>
         <a href=""><i class="fa fa-twitter"></i></a>
         <a href=""><i class="fa fa-instagram"></i></a>
-        <a href=""><i class="fa fa-linkedin"></i></a>
-        <a href=""><i class="fa fa-youtube"></i></a>
       </div>
     </div>
   </div>
+  <hr>
   <div class="footer-copyright">
     <div class="copyright">© 2024 GreatMind. All rights reserved.</div>
     <div class="support-links">
-      <a class="mail">
-        <span><i class="fa fa-envelope"></i></span>
-        <span>{{'support@greatmind.com'}}</span>
-      </a>
-      <h4>
-        <span><i class="fa fa-phone"></i></span>
-        <span class="contact">+91 123456789</span>
-      </h4>
+      <div class="icons">
+        <h3 class="contact-icon"><i class="fa fa-envelope"></i></h3>
+        <a class="mail">
+          <span>{{'support@greatmind.com'}}</span>
+        </a>
+      </div>
+      <div class="icons">
+        <h3 class="contact-icon"><i class="fa fa-phone"></i></h3>
+        <h4>
+          <span class="contact">+91 123456789</span>
+        </h4>
+      </div>
     </div>
     <div class="whatsapp-link">
-      <span><i class="fa fa-whatsapp"></i></span>
+      <span><i class="fa fa-whatsapp" title="Chat with us"></i></span>
     </div>
   </div>
 </div>
