--- a/lms-project/src/app/components/navbar/navbar.component.scss
+++ b/lms-project/src/app/components/navbar/navbar.component.scss
@@ -151,6 +151,13 @@
     border-radius: 16px;
     padding: var(--padding-25);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+    transform: scale(0);
+    transition: transform 0.5s;
+    transform-origin: center;
+
+    &.active {
+      transform: scale(1);
+    }
 
     .close-menu {
       display: none;
