Add Responsive Nav

--- a/lms-project/src/app/app.component.html
+++ b/lms-project/src/app/app.component.html
@@ -1,8 +1,12 @@
-<!-- navbar header -->
-<app-navbar></app-navbar>
+<section>
+  <header>
+    <app-navbar></app-navbar>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</section>
 
-<!-- load all nav items here -->
-<router-outlet></router-outlet>
-
-<!-- footer -->
-<app-footer></app-footer>
+<footer>
+  <app-footer></app-footer>
+</footer>
