--- a/lms-project/src/app/components/navbar/navbar.component.scss
+++ b/lms-project/src/app/components/navbar/navbar.component.scss
@@ -1,310 +1,205 @@
-.nav-container {
+.wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: 15vh;
-  padding: var(--padding-25);
+  height: 100px;
+  padding: 0 10%;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: var(--bg-dark);
-
-  .bars {
-    display: none;
-  }
-
-  .mobile-nav-links {
-    display: none;
-  }
+  z-index: 999;
+  background: var(--bg-light);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 
   .logo {
-    h1 {
-      color: var(--text-light-white);
-      font-size: var(--heading-large);
-      font-weight: 800;
-      letter-spacing: 8px;
-      cursor: pointer;
-
-      span {
-        color: var(--text-red);
-      }
+    a img {
+      height: 100px;
+      width: 100px;
+      object-fit: contain;
     }
   }
 
   .nav-links {
-    width: 70%;
+    padding: 0 20px;
+    display: inline-flex;
+    gap: 20px;
 
     li {
-      display: inline-block;
       cursor: pointer;
-      margin: var(--margin-15);
-      transition: color 0.3s;
-      user-select: none;
+      display: inline-block;
+      padding: 10 20px;
 
-      .arrow {
-        margin-left: var(--margin-10);
+      .mega-menu {
+        width: 100vw;
+        height: 80vh;
+        display: flex;
+        padding: 20px 10%;
+        top: 80px;
+        left: 0;
+        position: absolute;
+        background: var(--bg-light);
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.3s ease;
+
+        .program-list {
+          width: 865px;
+          position: relative;
+
+          li {
+            cursor: pointer;
+            display: block;
+            width: 310px;
+            border-radius: 5px;
+
+            a {
+              width: 100%;
+              height: 100%;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              padding: 5px 10px;
+              box-sizing: border-box;
+              outline: none;
+              border: 0;
+              border-radius: 5px;
+              opacity: 0.5;
+              font-weight: 300;
+
+              img {
+                width: 30px;
+                height: 30px;
+                object-fit: contain;
+              }
+            }
+
+            a.active {
+              background-color: var(--bg-primary);
+              color: var(--text-white);
+              opacity: 1;
+              font-weight: 500;
+            }
+          }
+
+          .mega-sub-menu {
+            width: 620px;
+            top: 0;
+            left: 40%;
+            position: absolute;
+            background: var(--bg-light);
+            transition: all 0.3s ease;
+
+            .program-category {
+              display: grid;
+              grid-template-columns: repeat(2, 1fr);
+              gap: 10px;
+            }
+          }
+        }
+
+        .menu-banner {
+          width: 325px;
+        }
       }
-    }
 
-    li a,
-    li span {
-      font-weight: 300;
-      font-size: var(--heading);
-      color: var(--text-white);
-    }
+      a {
+        opacity: 0.5;
+      }
 
-    li:hover span,
-    li:hover a{
-      color: var(--text-light-gray);
-    }
+      .active,
+      &:hover a {
+        opacity: 1;
+      }
 
-    .contact-us {
-      background-color: var(--bg-light);
-      border-radius: var(--border-radius-5);
-      padding: var(--padding-5) var(--padding-15);
-      transition: background-color 0.3s;
-    }
-
-    .contact-us a {
-      color: var(--text-black) !important;
-      transition: color 0.3s;
-    }
-
-    .contact-us:hover a {
-      color: var(--text-white) !important;
-    }
-
-    .contact-us:hover {
-      background-color: var(--bg-primary);
+      &:hover .mega-menu {
+        visibility: visible;
+        opacity: 1;
+        top: 90px;
+      }
     }
   }
 
   .mobile-nav-links {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: 100vh;
+    height: 100px;
     display: flex;
-    justify-content: center;
-
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 1;
-    }
-
-    .close-modal {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      font-size: var(--heading-medium);
-      cursor: pointer;
-      z-index: 2;
-    }
-
-    ul {
-      position: relative;
-      height: 400px;
-      width: 75vw;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background-color: white;
-      border-radius: var(--border-radius-10);
-      padding: var(--padding-25);
-      z-index: 2;
-      margin-top: 35%;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
-
-      li {
-        display: block;
-        cursor: pointer;
-        margin: var(--margin-15);
-        transition: color 0.3s;
-        user-select: none;
-        font-size: var(--heading);
-      }
-
-      li:hover {
-        color: var(--text-blue);
-      }
-
-    }
-  }
-
-  .programs-wrapper {
-    z-index: 3;
-    position: absolute;
-    top: 90px;
-    left: 5%;
-    height: 85vh;
-    width: 90vw;
-    min-width: 676px;
-    background-color: var(--bg-light);
-    border-radius: 16px;
-    padding: var(--padding-25);
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
-    transform: scale(0);
-    transition: transform 0.5s;
-    transform-origin: center;
-
-    &.active {
-      transform: scale(1);
-    }
-
-    .close-menu {
-      display: none;
-    }
-
-    .category-wrapper {
-      display: flex;
-      gap: var(--margin-25);
-      margin-bottom: var(--margin-15);
-
-      h3 {
-        font-size: var(--heading-medium);
-
-        span {
-          margin-left: var(--margin-15);
-        }
-      }
-
-      button {
-        width: 400px;
-        display: flex;
-        align-items: center;
-        padding: var(--padding-25) var(--padding-15);
-        background-color: aliceblue;
-        border-radius: var(--border-radius-15);
-        margin: var(--margin-25) 0;
-        font-size: var(--heading);
-        outline: transparent;
-        border: 0;
-        transition: box-shadow 0.1s;
-
-        img {
-          height: 40px;
-          width: 40px;
-          margin-right: var(--margin-10);
-        }
-      }
-
-      button:hover {
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-      }
-
-      .courses {
-        padding: 0 var(--padding-15);
-      }
-
-      .course-list {
-        height: 380px;
-        overflow-y: auto;
-
-        li {
-          width: 320px;
-          padding: var(--padding-15);
-          background-color: aliceblue;
-          border-radius: var(--border-radius-15);
-          margin: var(--margin-15) 0;
-          font-size: var(--heading);
-          cursor: pointer;
-          transition: box-shadow 0.2s, color 0.2s;
-          box-sizing: border-box;
-
-          span {
-            margin-left: var(--margin-15);
-          }
-        }
-
-        .subdomains {
-          position: absolute;
-          top: 12%;
-          right: 18%;
-          max-height: 380px !important;
-          overflow-y: auto;
-        }
-
-        li:hover{
-          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        }
-      }
-    }
-
-    .program-footer {
-      height: 100px;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: var(--bg-dark);
-      border-radius: var(--border-radius-10);
-      font-size: var(--heading);
-      color: aliceblue;
-      cursor: pointer;
-    }
-
+    justify-content: space-evenly;
   }
 }
 
 // responsive designs
 // for mobile
 @media screen and (max-width: 768px) {
-  .logo{
-    h1 {
-      font-size: var(--heading-medium) !important;
-    }
-  }
-  .bars {
-    display: inline-block !important;
-    color: whitesmoke;
-    font-size: var(--heading-medium);
-    cursor: pointer;
-  }
+  .wrapper {
+    padding: 20px 10%;
+    height: 90px !important;
+    justify-content: space-between !important;
 
-  .nav-links {
-    display: none;
-  }
-
-  .programs-wrapper {
-    .close-menu {
-      display: block !important;
-    }
-
-    .category-wrapper {
-      flex-direction: column;
-    }
-  }
-}
-
-// for tablet
-@media screen and (max-width: 1044) {
-  .mobile-nav-links {
-    display: none;
-  }
-
-  .nav-container {
     .nav-links {
-      width: 80%;
+      display: none !important;
+    }
 
-      li span {
-        font-size: var(--subheading);
+    .mobile-nav-links {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 90px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: var(--b-light-1);
+
+      ul {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+        height: 100%;
+        gap: 10px;
+        font-size: 0.8rem;
+
+        li {
+          text-align: center;
+          cursor: pointer;
+          width: 80px;
+
+          .icon {
+            font-size: 20px;
+            width: 100%;
+            border-radius: 20px;
+            transform: scale(0.8);
+            transform-origin: center;
+            opacity: 0.6;
+            transition: transform 0.2s, background 0.2s, opacity 0.2s;
+          }
+
+          .active {
+            .icon {
+              background: var(--bg-light);
+              transform: scale(1);
+              opacity: 1;
+            }
+          }
+        }
       }
     }
   }
 }
 
-// for desktop
-@media screen and (max-width: 1440px) {
+/* For tablet */
+@media screen and (min-width: 769px) and (max-width: 1044px) {
   .mobile-nav-links {
-    display: none;
+    display: none !important;
   }
-
 }
+
+/* For desktop */
+@media screen and (min-width: 1045px) {
+  .mobile-nav-links {
+    display: none !important;
+  }
+}
+
